--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ieee-website",
+  "homepage": "https://utkrsh1203.github.io/ieee-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,14 +12,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "gh": "^2.8.9",
+    "gh-pages": "^4.0.0",
+    "pages": "^0.0.16",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
